ODPM-128: Safari flex-wrap bug, attempt #2
For whatever reason, Safari is choosing to (flex-)wrap adjacent elements with width 66.66666667% and 33.33333333%. One might assume that these do not sum to > 100%, but life is funny that way.

This compensates for Safari's odd math by setting the flex-basis of the smaller box to 33.2329%.

--- a/traffic_stops/static/less/index.less
+++ b/traffic_stops/static/less/index.less
@@ -329,6 +329,11 @@ code {
     .align-items(center);
     .flex-wrap(wrap);
 
+    .col-md-4 {
+      // addressing a bizarre Safari bug
+      .flex-basis(33.2329%);
+    }
+
     @media (max-width: 768px) {
       > * {
         text-align: center;
